--- a/httpserver/http_server.yaml
+++ b/httpserver/http_server.yaml
@@ -14,8 +14,7 @@ spec:
     spec:
       containers:
         - name: http-server
-          image: shendawei/http-server:v1.1
-          #image: 6e8d397f95cf
+          image: shendawei/httpserver:v1.1
           imagePullPolicy: IfNotPresent
           resources:
             limits:
@@ -41,4 +40,5 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 5
             successThreshold: 2
-      serviceAccountName: http
+      imagePullSecrets:
+        - name: regcred
